# yottaclock

./: Cargo.toml  build.rs
.cargo/: audit.toml
migrations/: 20221015004104_init.down.sql  20221015004104_init.up.sql
src/: errors.rs  human_duration.rs  main.rs  routes.rs  session.rs  templates.rs  toggl.rs
src/human_duration/: tests.rs
src/routes/: account.rs  dayoff_delete.rs  dayoff_new.rs  daysoff.rs  index.rs  login.rs  newproject.rs  project_delete.rs  project_new.rs  projects.rs  signup.rs
src/routes/api/v1/: status.rs
src/routes/index/: tests.rs
src/toggl/: tests.rs
templates/: account.html  base.html  dayoff_new.html  daysoff.html  index.html  login.html  newproject.html  project_new.html  projects.html  signup.html  signup_step1.html  signup_step2.html
