[package]
name = "yottaclock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5", features = ["form", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.38", features = ["serde", "clock", "std", "wasmbind"], default-features = false }
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
futures = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
