[package]
name = "yottaclock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.9", features = ["form", "macros"] }
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.39", features = ["serde", "clock", "std", "wasmbind"], default-features = false }
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
futures = "0.3.31"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "1.0.69"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
