[package]
name = "yottaclock"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.16.0"
axum = { version = "0.8.9", features = ["form", "macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.44", features = ["serde", "clock", "std", "wasmbind"], default-features = false }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
futures = "0.3.32"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["json", "query", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
tower-http = { version = "0.6.9", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
